--- a/test.html
+++ b/test.html
@@ -169,7 +169,7 @@
     .subs-zone{ padding: 0 .8cqw; }
   }
 
-  /* ===== FAB Share (Material bianco, quadrato) ===== */
+  /* FAB Share */
   .fab-share{
     --fab-size: clamp(36px, 10cqw, 48px);
     --fab-edge: clamp(10px, 2cqw, 16px);
@@ -194,7 +194,7 @@
   .fab-share[aria-busy="true"]{ pointer-events:none; opacity:.7 }
   .fab-share svg{ width: calc(var(--fab-size) * .56); height: calc(var(--fab-size) * .56); fill: currentColor; }
 
-  /* ===== FAB Instagram (identico al FAB share) ===== */
+  /* FAB Instagram (identico al FAB share) */
   .fab-ig{
     --fab-size: clamp(36px, 10cqw, 48px);
     --fab-edge: clamp(10px, 2cqw, 16px);
@@ -217,7 +217,7 @@
   }
   .fab-ig:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18); }
   .fab-ig:active{ transform: translateY(0); background:#eceef2; }
-  .fab-ig:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2 px; }
+  .fab-ig:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2px; }
   .fab-ig svg{
     width: calc(var(--fab-size) * .56);
     height: calc(var(--fab-size) * .56);
@@ -269,7 +269,7 @@
     }
   }
 
-  /* ===== SUBS badge BOOST su mobile ===== */
+  /* SUBS badge BOOST su mobile */
   @container (max-width: 520px){
     .stage{ --brush-bleed-y: 3.4cqh; }
     .subs-badge{
@@ -338,7 +338,7 @@
             <stop offset="100%" stop-color="#0a6f20"/>
           </linearGradient>
 
-          <!-- Bande 50/50 allineate top e bottom -->
+          <!-- Bande 50/50 allineate top e bottom (880 = 8×110) -->
           <pattern id="mow" patternUnits="userSpaceOnUse" width="1000" height="110" patternTransform="translate(0,120)">
             <rect x="0" y="0"  width="1000" height="55" fill="#ffffff" opacity="0.12"/>
             <rect x="0" y="55" width="1000" height="55" fill="transparent"/>
@@ -412,13 +412,12 @@ const eps=0.03, base=Math.acos((areaD-spot)/R);
 addCircle(cx,spot,R,base-eps,Math.PI-base+eps,260,3);
 addCircle(cx,H-spot,R,Math.PI+base-eps,2*Math.PI-base+eps,260,3);
 
-/* ====== DATI ====== */
+/* ====== DATI (ID/GID sheet) ====== */
 const SHEET_FILE_ID='1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
 const DIST_GID='116187224';
-const PUBLISHED_DIST_URL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=116187224&single=true';
-
 const META_GID='254048258';
 const OPP_GID='1284472120';
+const PUBLISHED_DIST_URL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml?gid=116187224&single=true';
 const PUBLISHED_META_URL='';
 const PUBLISHED_OPP_URL='';
 
@@ -449,50 +448,9 @@ function canonicalFormation(name){
   return FORMATION_ALIASES[digits] || "3-4-1-2";
 }
 
-/* ====== RENDER ====== */
-function pct(n){ return (n/1000*100).toFixed(3)+'%'; }
-function SURNAME(full){ const t=String(full||'').trim(); if(!t) return ''; const p=t.split(/\s+/); return p[p.length-1].toUpperCase(); }
-function playerNode(obj,x,y){
-  const div=document.createElement('div'); div.className='player';
-  div.style.left=pct(x); div.style.top=pct(y);
-  const img=document.createElement('img'); img.className='photo'; img.alt=obj.name||'';
-  // crossOrigin lo gestiamo solo se remoto in setLogo; per i players non serve
-  if(obj.photo){ img.src=obj.photo; img.onerror=()=>{img.onerror=null; img.src=`img/players/${obj.num}.png`;};}
-  else{ img.src=`img/players/${obj.num}.png`; img.onerror=()=>img.remove(); }
-  div.appendChild(img);
-  const badge=document.createElement('span'); badge.className='badge'; badge.textContent=`${obj.num}.${SURNAME(obj.name)}`;
-  div.appendChild(badge);
-  return div;
-}
-
-function render(byNum, modulo="3412"){
-  const layer=document.getElementById('players'); layer.innerHTML='';
-  const key = canonicalFormation(modulo);
-
-  if (key === "3-4-1-2"){
-    XI_NUMBERS.forEach((n,i)=>{
-      const p=byNum.get(n)||{num:n,name:''};
-      const [u,v]=coords3412[i];
-      const world=map(u,v);
-      layer.appendChild(playerNode(p,world.x,world.y));
-    });
-  } else {
-    const table = FORMATIONS_UV[key] || {};
-    XI_NUMBERS.forEach(n=>{
-      const p=byNum.get(n)||{num:n,name:''};
-      const uv = table[n] || [34,50];
-      const world=map(uv[0], uv[1]);
-      layer.appendChild(playerNode(p,world.x,world.y));
-    });
-  }
-
-  const subs=BENCH_NUMBERS.map(n=>{const p=byNum.get(n)||{num:n,name:''}; return `${p.num}.${SURNAME(p.name)}`;}).join('  ');
-  document.getElementById('subsList').textContent=subs;
-}
-
-/* ====== LOGHI (robusti con fallback multipli) ====== */
+/* ====== LOGHI (Map avversari + fallback) ====== */
 function normalizeOpp(rows = []) {
-  const out = new Map();
+  const out=new Map();
   rows.forEach(r=>{
     const name=(''+(r.Squadra||r.squadra||r.Team||r.team||'')).trim();
     const url =(''+(r.Logo||r.logo||r.URL||r.url||'')).trim();
@@ -507,45 +465,36 @@ function slugify(s){
     .replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,'');
 }
 const LOCAL_LOGO_EXTS = ['webp','png','jpg','jpeg','svg'];
-
 function logoCandidates(teamName, oppMap){
   const name=(teamName||'').trim();
   if(!name) return [];
-  const c = [];
-  const fromSheet = oppMap.get(name.toLowerCase());
-  if(fromSheet) c.push(fromSheet);
-  const base = `logos/${slugify(name)}`;
-  LOCAL_LOGO_EXTS.forEach(ext => c.push(`${base}.${ext}`));
-  c.push('logos/_placeholder.svg'); // metti un placeholder opzionale
-  return [...new Set(c)];
+  const list=[];
+  const fromSheet=oppMap.get(name.toLowerCase());
+  if(fromSheet) list.push(fromSheet);
+  const base=`logos/${slugify(name)}`;
+  LOCAL_LOGO_EXTS.forEach(ext=>list.push(`${base}.${ext}`));
+  list.push('logos/_placeholder.svg');
+  return [...new Set(list)];
 }
 function isCrossOrigin(url){
-  try{
-    const u = new URL(url, location.href);
-    return u.origin !== location.origin;
-  }catch{ return false; }
+  try{ const u=new URL(url, location.href); return u.origin!==location.origin; }
+  catch{ return false; }
 }
 function setLogo(imgEl, sources, alt){
   if(!imgEl) return;
-  const list = Array.isArray(sources) ? sources.filter(Boolean) : [];
-  imgEl.alt = alt || '';
-  imgEl.style.visibility = 'hidden';
-
-  let i = 0;
-  const tryNext = () => {
-    if(i >= list.length){ console.warn('Nessun logo caricato per', alt, list); return; }
-    const src = list[i++];
-    const test = new Image();
-    if(isCrossOrigin(src)) test.crossOrigin = 'anonymous';
-    test.onload  = () => {
-      // assegna al vero <img>; set crossOrigin solo se remoto
-      if(isCrossOrigin(src)) imgEl.crossOrigin = 'anonymous';
-      else imgEl.removeAttribute('crossorigin');
-      imgEl.src = src;
-      imgEl.style.visibility='visible';
+  const list=Array.isArray(sources)?sources.filter(Boolean):[];
+  imgEl.alt=alt||''; imgEl.style.visibility='hidden';
+  let i=0;
+  const tryNext=()=>{
+    if(i>=list.length){ console.warn('Nessun logo caricato per', alt, list); return; }
+    const src=list[i++], probe=new Image();
+    if(isCrossOrigin(src)) probe.crossOrigin='anonymous';
+    probe.onload=()=>{
+      if(isCrossOrigin(src)) imgEl.crossOrigin='anonymous'; else imgEl.removeAttribute('crossorigin');
+      imgEl.src=src; imgEl.style.visibility='visible';
     };
-    test.onerror = tryNext;
-    test.src = src;
+    probe.onerror=tryNext;
+    probe.src=src;
   };
   tryNext();
 }
@@ -585,15 +534,15 @@ async function fetchCsvPrefer(fileId,gid,pubUrl){
   }
   return [];
 }
-const fetchDistRows   = ()=>fetchCsvPrefer(SHEET_FILE_ID, DIST_GID, PUBLISHED_DIST_URL);
-const fetchMetaRows   = ()=>fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
-const fetchOppRows    = ()=>fetchCsvPrefer(SHEET_FILE_ID, OPP_GID,  PUBLISHED_OPP_URL);
+const fetchDistRows = ()=>fetchCsvPrefer(SHEET_FILE_ID, DIST_GID, PUBLISHED_DIST_URL);
+const fetchMetaRows = ()=>fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
+const fetchOppRows  = ()=>fetchCsvPrefer(SHEET_FILE_ID, OPP_GID,  PUBLISHED_OPP_URL);
 
 function normalizeDist(rows){
   if(!rows||!rows.length) return new Map();
   const keys=Object.keys(rows[0]);
   const norm=s=>String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase();
-  let kNum=keys.find(k=>/#|num|numero|maglia/.test(norm(k)))||keys[0];
+  let kNum =keys.find(k=>/#|num|numero|maglia/.test(norm(k)))||keys[0];
   let kName=keys.find(k=>/giocatore|player|nome|cognome/.test(norm(k)))||keys[1];
   let kPhoto=keys.find(k=>/foto|photo|img|immagine/.test(norm(k)));
   const map=new Map();
@@ -603,17 +552,64 @@ function normalizeDist(rows){
   });
   return map;
 }
+
+/* === FIX: normalizzazione robusta delle chiavi del META === */
 function normalizeMeta(rows){
   const out=new Map();
+  const canon=s=>String(s||'')
+    .normalize('NFD').replace(/[\u0300-\u036f]/g,'') // rimuove accenti
+    .toLowerCase()
+    .replace(/[^a-z0-9]+/g,'');                      // toglie spazi/punteggiatura
+
   rows.forEach(r=>{
-    const k=(''+(r.Key||r.KEY||'')).trim().toLowerCase();
-    const v=(''+(r.Value||r.VALORE||'')).trim();
-    if(k) out.set(k, v);
+    const rawKey=(r.Key ?? r.KEY ?? r.key ?? '').toString();
+    const val   =(r.Value ?? r.VALORE ?? r.value ?? '').toString().trim();
+    const k=canon(rawKey);         // "Squadra 2" → "squadra2"; "Modulo" → "modulo"
+    if(k) out.set(k,val);
   });
   return out;
 }
 
-/* ====== FAB auto-avoid su telefoni piccoli ====== */
+/* ====== RENDER ====== */
+function pct(n){ return (n/1000*100).toFixed(3)+'%'; }
+function SURNAME(full){ const t=String(full||'').trim(); if(!t) return ''; const p=t.split(/\s+/); return p[p.length-1].toUpperCase(); }
+function playerNode(obj,x,y){
+  const div=document.createElement('div'); div.className='player';
+  div.style.left=pct(x); div.style.top=pct(y);
+  const img=document.createElement('img'); img.className='photo'; img.alt=obj.name||''; img.crossOrigin='anonymous';
+  if(obj.photo){ img.src=obj.photo; img.onerror=()=>{img.onerror=null; img.src=`img/players/${obj.num}.png`;};}
+  else{ img.src=`img/players/${obj.num}.png`; img.onerror=()=>img.remove(); }
+  div.appendChild(img);
+  const badge=document.createElement('span'); badge.className='badge'; badge.textContent=`${obj.num}.${SURNAME(obj.name)}`;
+  div.appendChild(badge);
+  return div;
+}
+function render(byNum, modulo="3412"){
+  const layer=document.getElementById('players'); layer.innerHTML='';
+  const key=canonicalFormation(modulo);
+
+  if (key==="3-4-1-2"){
+    XI_NUMBERS.forEach((n,i)=>{
+      const p=byNum.get(n)||{num:n,name:''};
+      const [u,v]=coords3412[i];
+      const world=map(u,v);
+      layer.appendChild(playerNode(p,world.x,world.y));
+    });
+  }else{
+    const table=FORMATIONS_UV[key]||{};
+    XI_NUMBERS.forEach(n=>{
+      const p=byNum.get(n)||{num:n,name:''};
+      const uv=table[n]||[34,50];
+      const world=map(uv[0],uv[1]);
+      layer.appendChild(playerNode(p,world.x,world.y));
+    });
+  }
+
+  const subs=BENCH_NUMBERS.map(n=>{const p=byNum.get(n)||{num:n,name:''}; return `${p.num}.${SURNAME(p.name)}`;}).join('  ');
+  document.getElementById('subsList').textContent=subs;
+}
+
+/* ====== POSIZIONAMENTI BADGE & FAB ====== */
 function computeTopForBadges(){
   const stage=document.querySelector('.stage'); const pitch=document.querySelector('.pitch-wrap');
   if(!stage||!pitch) return 20;
@@ -631,31 +627,25 @@ function placeSubsByPitch(){
   const Mx=(A.x+B.x)/2; el.style.left=((Mx/1000)*100).toFixed(3)+'%';
 }
 function layoutFABs(){
-  const stage = document.querySelector('.stage');
-  const share = document.getElementById('shareFab');
-  const ig    = document.getElementById('igFab');
-  const md    = document.getElementById('matchdayBadge');
-  if(!stage || !share || !ig || !md) return;
+  const stage=document.querySelector('.stage');
+  const share=document.getElementById('shareFab');
+  const ig=document.getElementById('igFab');
+  const md=document.getElementById('matchdayBadge');
+  if(!stage||!share||!ig||!md) return;
 
-  share.style.top = '';
-  ig.style.top = '';
-
-  const srect = stage.getBoundingClientRect();
-  const mdRect = md.getBoundingClientRect();
-  const fabRect = share.getBoundingClientRect();
-
-  const overlap = !(fabRect.right < mdRect.left ||
-                    fabRect.left  > mdRect.right ||
-                    fabRect.bottom< mdRect.top ||
-                    fabRect.top   > mdRect.bottom);
+  share.style.top=''; ig.style.top='';
+  const srect=stage.getBoundingClientRect();
+  const mdRect=md.getBoundingClientRect();
+  const fabRect=share.getBoundingClientRect();
+  const overlap=!(fabRect.right<mdRect.left||fabRect.left>mdRect.right||fabRect.bottom<mdRect.top||fabRect.top>mdRect.bottom);
 
   if(overlap){
-    const csShare = getComputedStyle(share);
-    const fabSize = parseFloat(csShare.getPropertyValue('--fab-size')) || share.offsetWidth;
-    const gap     = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--fab-stack-gap')) || 8;
-    const targetTop = Math.round(mdRect.bottom - srect.top + 8);
-    share.style.top = targetTop + 'px';
-    ig.style.top    = (targetTop + fabSize + gap) + 'px';
+    const csShare=getComputedStyle(share);
+    const fabSize=parseFloat(csShare.getPropertyValue('--fab-size'))||share.offsetWidth;
+    const gap=parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--fab-stack-gap'))||8;
+    const targetTop=Math.round(mdRect.bottom - srect.top + 8);
+    share.style.top=targetTop+'px';
+    ig.style.top=(targetTop + fabSize + gap)+'px';
   }
 }
 
@@ -668,19 +658,22 @@ function layoutFABs(){
 
     const byNum = normalizeDist(distRows);
     const meta  = normalizeMeta(metaRows);
-    const opp   = normalizeOpp(oppRows || []); // <-- sempre Map()
+    const opp   = normalizeOpp(oppRows || []);
 
-    /* Modulo dal Meta (senza trattini: 3412 / 433 / 4231). Default 3412. */
-    const modulo = (meta.get('modulo')||'3412').toString().trim();
+    // DEBUG: vedi cosa stiamo leggendo dal Meta
+    console.debug('META keys →', Object.fromEntries(meta));
+
+    /* Modulo dal Meta (senza trattini in input: 3412/433/4231). Default 3412. */
+    const modulo   = (meta.get('modulo')   || '3412').toString().trim();
+    const giornata = (meta.get('giornata') || '').toString().trim();
+    const squadra1 = (meta.get('squadra1') || '').toString().trim() || 'Petriolese';
+    const squadra2 = (meta.get('squadra2') || '').toString().trim();
+
     render(byNum, modulo);
-
-    const giornata = (meta.get('giornata')||'').toString().trim();
-    const squadra1 = (meta.get('squadra1')||'').toString().trim() || 'Petriolese';
-    const squadra2 = (meta.get('squadra2')||'').toString().trim();
 
     document.getElementById('mdSub').textContent = giornata ? `GIORNATA ${giornata}` : '';
 
-    // Loghi con fallback multipli
+    // Loghi con fallback multipli (sheet → file locali → placeholder)
     setLogo(document.getElementById('logo1'), logoCandidates(squadra1, opp), squadra1);
     setLogo(document.getElementById('logo2'), logoCandidates(squadra2, opp), squadra2);
 
@@ -690,6 +683,7 @@ function layoutFABs(){
     });
   }catch(e){
     console.error(e);
+    // fallback visivo: 3412 vuoto
     render(new Map(), "3412");
   }
 
